--- a/theme/lms/templates/index.html
+++ b/theme/lms/templates/index.html
@@ -9,9 +9,10 @@
 <title>Losalamos - HTML 5 Template Preview</title>
 
 % if footer_css_urls:
-  % for url in footer_css_urls:
-    <link rel="stylesheet" type="text/css" href="${url}"></link>
-% endfor
+	  % for url in footer_css_urls:
+	    <link rel="stylesheet" type="text/css" href="${url}"></link>
+	% endfor
+% endif
 
 </head>
 
@@ -1124,22 +1125,11 @@
 </button>
 
 
-<!-- jequery plugins -->
-<script src="../static/assets/js/jquery.js"></script>
-<script src="../static/assets/js/popper.min.js"></script>
-<script src="../static/assets/js/bootstrap.min.js"></script>
-<script src="../static/assets/js/owl.js"></script>
-<script src="../static/assets/js/wow.js"></script>
-<script src="../static/assets/js/validation.js"></script>
-<script src="../static/assets/js/jquery.fancybox.js"></script>
-<script src="../static/assets/js/appear.js"></script>
-<script src="../static/assets/js/jquery.countTo.js"></script>
-<script src="../static/assets/js/scrollbar.js"></script>
-<script src="../static/assets/js/tilt.jquery.js"></script>
-<script src="../static/assets/js/jQuery.style.switcher.min.js"></script>
-
-<!-- main-js -->
-<script src="../static/assets/js/script.js"></script>
+% if footer_js_url:
+ % for url in footer_js_url:
+  <script type="text/javascript" src="${url}"></script>
+  $ endfor
+% endif
 
 </body><!-- End of .page_wrapper -->
 
