its addeda  index html

--- a/theme/lms/templates/index.html
+++ b/theme/lms/templates/index.html
@@ -1128,10 +1128,9 @@
 % if footer_js_url:
  % for url in footer_js_url:
   <script type="text/javascript" src="${url}"></script>
-  $ endfor
+  % endfor
 % endif
 
 </body><!-- End of .page_wrapper -->
 
-<!-- Mirrored from azim.commonsupport.com/Losalamos/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 08 Jul 2020 15:57:05 GMT -->
 </html>
