its addeda  index html

--- a/theme/lms/templates/index.html
+++ b/theme/lms/templates/index.html
@@ -8,11 +8,16 @@
 
 <title>Losalamos - HTML 5 Template Preview</title>
 
-% if footer_css_urls:
-	  % for url in footer_css_urls:
-	    <link rel="stylesheet" type="text/css" href="${url}"></link>
-	% endfor
-% endif
+<link href="../static/assets/css/font-awesome-all.css" rel="stylesheet">
+<link href="../static/assets/css/flaticon.css" rel="stylesheet">
+<link href="../static/assets/css/owl.css" rel="stylesheet">
+<link href="../static/assets/css/bootstrap.css" rel="stylesheet">
+<link href="../static/assets/css/jquery.fancybox.min.css" rel="stylesheet">
+<link href="../static/assets/css/animate.css" rel="stylesheet">
+<link href="../static/assets/css/color/theme-color.css" id="jssDefault" rel="stylesheet">
+<link href="../static/assets/css/switcher-style.css" rel="stylesheet">
+<link href="../static/assets/css/style.css" rel="stylesheet">
+<link href="../static/assets/css/responsive.css" rel="stylesheet">
 
 </head>
 
@@ -1125,11 +1130,18 @@
 </button>
 
 
-% if footer_js_url:
- % for url in footer_js_url:
-  <script type="text/javascript" src="${url}"></script>
-  % endfor
-% endif
+<script src="../static/assets/js/jquery.js"></script>
+<script src="../static/assets/js/popper.min.js"></script>
+<script src="../static/assets/js/bootstrap.min.js"></script>
+<script src="../static/assets/js/owl.js"></script>
+<script src="../static/assets/js/wow.js"></script>
+<script src="../static/assets/js/validation.js"></script>
+<script src="../static/assets/js/jquery.fancybox.js"></script>
+<script src="../static/assets/js/appear.js"></script>
+<script src="../static/assets/js/jquery.countTo.js"></script>
+<script src="../static/assets/js/scrollbar.js"></script>
+<script src="../static/assets/js/tilt.jquery.js"></script>
+<script src="../static/assets/js/jQuery.style.switcher.min.js"></script>
 
 </body><!-- End of .page_wrapper -->
 
